[gd_scene load_steps=2 format=2]

[ext_resource path="res://instance/hurtboxAndHitbox/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincible_end" from="." to="." method="_on_Hurtbox_invincible_end"]
[connection signal="invincible_start" from="." to="." method="_on_Hurtbox_invincible_start"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
